<resources>
    <string name="app_name">Store Finder</string>
    <string name="app_name_fff" translatable="false">Fast Food Finder</string>

    <string name="share_app">Share app</string>
    <string name="general">General</string>
    <string name="english">English</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="your_places">Your places</string>

    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="ipsum" translatable="false">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="share_app_with_friends">Share app with friends</string>
    <string name="use_metric_units">Use metric units</string>
    <string name="skip">Skip</string>
    <string name="join_now">Join now</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="change_your_password">Change your password</string>
    <string name="change_your_email">Change your email</string>
    <string name="set_notifications">Set notifications</string>
    <string name="support">Support</string>
    <string name="about_fastfood_finder">About Fastfood Finder</string>
    <string name="rate_app">Rate App</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="sign_out">Sign Out</string>
    <string name="choose_a_image">Choose a image:</string>
    <string name="choose_from_your_device">Choose From your Device</string>
    <string name="image_you_choose">Image you choose:</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="update_cover_image">Update cover image</string>
    <string name="_3_lists">3 lists</string>
    <string name="my_save_places">My Save Places</string>
    <string name="_3_places">3 Places</string>
    <string name="my_favourite_places">My Favourite Places</string>
    <string name="_2_places">2 Places</string>
    <string name="my_checked_in_places">My Checked in Places</string>
    <string name="create_a_new_list">Create a new list</string>
    <string name="recently">Recently</string>
    <string name="suggestions_for_this_afternoon">Suggestions for this afternoon</string>
    <string name="suggestion">Suggestion</string>
    <string name="top_picks">Top Picks</string>
    <string name="nearest">Nearest</string>
    <string name="trending">Trending</string>
    <string name="convenience_store">Convenience store</string>
    <string name="add_to_my_favorite">Add to my favorite</string>
    <string name="view_more_detail">View More Detail</string>
    <string name="call">Call</string>
    <string name="directions">Directions</string>
    <string name="save_this">Save this</string>
    <string name="checked_in">Checked in</string>
    <string name="rate_it">Rate it</string>
    <string name="comment">Comment</string>
    <string name="tips_from_people_who_has_been_here">Tips from people who has been here…</string>
    <string name="map">MAP</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_successfully">Sign In Successfully!</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="search_error">Search error!</string>
    <string name="type_name_store">Type name of store…</string>
    <string name="update_database_successfull">Update store database successfully</string>
    <string name="update_database_successfull_with_count">Update database of %s stores successfully</string>
    <string name="update_database_failed">Update database failed: </string>
    <string name="str_update_app_db">Update app database</string>
    <string name="str_updating_store_db">Updating store database</string>
    <string name="want_undo">Undo?</string>
    <string name="undo">UNDO</string>
    <string name="delete_favourite_location">Delete Favourite Destination</string>
    <string name="are_you_sure">Are you sure you want to delete this destiantion?</string>
    <string name="favourite">Favourite</string>
    <string name="tip_from_people">Tips from people who has been here</string>
    <string name="personal">Personal</string>
    <string name="ar">Live sight</string>
    <string name="connection">Connection</string>
    <string name="setting">Setting</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="about_author">About Author</string>
    <string name="my_moment">My moment</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="list_you_create">List you created</string>
    <string name="subscription">Receive discount</string>
    <string name="update_db">Update store database</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="splash_footer" translatable="false">Store Finder 2016</string>
    <string name="unregistered_user">Unregistered User</string>
    <string name="unregistered_email" translatable="false">anonymous@fastfoodfinder.com</string>
    <string name="gps_is_loading">GPS is loading…</string>
    <string name="fav_stores_added">Added to favourite stores</string>
    <string name="store_no_phone_numb">This store doesn\'t have number phone!</string>
    <string name="cannot_connect_location_service">Cannot connect to location service</string>
    <string name="cannot_get_curr_location">Cannot get current location!</string>
    <string name="get_store_data_failed">Failed to get stores data!</string>
    <string name="add_comment_or_photo">Add comment or photo</string>
    <string name="cannot_post_comment">Can not post the comment. Your content is more %d characters</string>
    <string name="close_comment_editor">Close comment editor?</string>
    <string name="camera_not_found">Camera not found</string>
    <string name="list_name_cannot_empty">List name cannot be empty!</string>
    <string name="list_name_already_exists">List name is already created, try a new one!</string>
    <string name="get_map_direction_failed">Failed to get map direction!</string>
    <string name="successfully">Successfully</string>
    <string name="failed">Failed</string>
    <string name="ok">OK</string>
    <string name="store_not_found">Store not found!</string>
    <string name="count_places">%s places</string>
    <string name="add_to_fav">Favourite this</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">Confirmation password</string>
    <string name="sign_up">Register</string>
    <string name="sign_up_successful">Register successfully</string>
    <string name="sign_up_fail">Register failed</string>
    <string name="sign_up_loading">Registering</string>
    <string name="member_register">Member register</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Invalid password</string>
    <string name="confirm_pwd_not_match">Confirmation password not match</string>
    <string name="app_login_description">An awesome android app that allows a you to find some fast food stores or convenient stores around.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="msg_retry_update_db">Failed to update store database. Retry download?</string>
    <string name="title_retry_update_db">Retry download</string>
    <string name="str_hint_login_account">You can login with your phone number or username</string>
    <string name="str_recover_pass_func">Recover password</string>
    <string name="get_image_from_picker_failed">Failed to get image from file picker</string>
    <string name="error_general_error_code">Unknown error.\nPlease try again later!</string>
    <string name="error_invalid_store_location">Invalid store location</string>
    <string name="str_open_24_hours">Open 24 hours</string>
    <string name="str_login_request">You need to login to use this feature!</string>
</resources>

