<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_sample_background" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_grey_blur" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <TextView
            android:id="@+id/app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:text="@string/an_awesome_android_app_that_allows_a_you_to_find_some_fast_food_stores_or_convenient_stores_around"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/app_description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:text="@string/app_name_fff"
            android:textColor="@color/colorWhite"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@color/bg_grey_blur"
            android:text="@string/skip"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:id="@+id/ll_3rd_party_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_above="@id/btn_skip"
            android:orientation="horizontal">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_facebook_signin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingTop="12dp"
                android:paddingRight="8dp"
                android:paddingBottom="12dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_google_signin"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@id/ll_3rd_party_btn"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:background="@color/googleBlue"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@id/btn_register"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:background="@color/googleBlue"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</RelativeLayout>
