<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_search_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E0E0E0"
        android:orientation="vertical"
        tools:context=".ui.main.SearchFragment">

        <!-- TODO: Update blank fragment layout -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_action_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/btn_search_circle_k"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_margin="16dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:src="@drawable/logo_circlek_red"
                        app:civ_border_color="@color/googleRed"
                        app:civ_fill_color="@color/googleRed" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/btn_search_family_mart"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_margin="16dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:src="@drawable/logo_familymart_red"
                        app:civ_border_color="@color/googleRed"
                        app:civ_fill_color="@color/googleRed" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/btn_search_mini_stop"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_margin="16dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:src="@drawable/logo_ministop_red"
                        app:civ_border_color="@color/googleRed"
                        app:civ_fill_color="@color/googleRed" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/btn_load_more"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_margin="16dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:src="@drawable/ic_search_loadmore"
                        app:civ_border_color="@color/googleRed"
                        app:civ_fill_color="@color/googleRed" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_load_more_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/btn_search_shop_n_go"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_margin="16dp"
                        android:src="@drawable/logo_shopngo_red"
                        app:civ_border_color="@color/googleRed"
                        app:civ_fill_color="@color/googleRed" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/btn_search_bsmart"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_margin="16dp"
                        android:src="@drawable/logo_bsmart_red"
                        app:civ_border_color="@color/googleRed"
                        app:civ_fill_color="@color/googleRed" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/btn_search_unknown1"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_profile_checkin"
                        app:civ_border_color="@color/googleRed"
                        app:civ_fill_color="@color/googleRed" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/btm_search_unknown2"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_profile_favourite"
                        app:civ_border_color="@color/googleRed"
                        app:civ_fill_color="@color/googleRed" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/recently"
            android:textColor="@color/colorGrey" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <include
                    android:id="@+id/layout_recent_1"
                    layout="@layout/item_recently_search" />

                <include
                    android:id="@+id/layout_recent_2"
                    layout="@layout/item_recently_search" />

                <include
                    android:id="@+id/layout_recent_3"
                    layout="@layout/item_recently_search" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:clickable="true"
                    android:text="THÊM TỪ LỊCH SỬ GẦN ĐÂY"
                    android:textColor="@color/colorGrey" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/suggestions_for_this_afternoon"
            android:textColor="@color/colorGrey" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <include
                    android:id="@+id/layout_suggestion_1"
                    layout="@layout/item_search_suggestion" />

                <include
                    android:id="@+id/layout_suggestion_2"
                    layout="@layout/item_search_suggestion" />

                <include
                    android:id="@+id/layout_suggestion_3"
                    layout="@layout/item_search_suggestion" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/suggestion"
            android:textColor="@color/colorGrey" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvTop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:drawableLeft="@drawable/ic_search_trophy"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/top_picks"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvNearest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:drawableLeft="@drawable/ic_search_navigation"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/nearest"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvTrending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:drawableLeft="@drawable/ic_search_trendingup"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/trending"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvConvenienceStore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:drawableLeft="@drawable/ic_all_store"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/convenience_store"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
